2004-03-01  Pierre Chifflier  <pollux@wzdftpd.net>

	* backends: pam backend started
	* configure.in: berkeley db headers and libs detection

2004-02-29  Pierre Chifflier  <pollux@wzdftpd.net>

	* feature: first implementation of protocols (used in custom
        scripts and custom site commands)
	* tcl: site tcl, tcl protocol - module is basically working
	* configure.in: mysql headers and lib detection
	* doc: several updates

2004-02-28  Roman Bogorodskiy <bogorodskiy@inbox.ru>

	* backends: mysql backend started

2004-02-27  Pierre Chifflier  <pollux@wzdftpd.net>

	* bugfix: infinite loop when waiting ident response when connect times out (linux)

2004-02-24  Pierre Chifflier  <pollux@wzdftpd.net>

	* bugfix: missing O_BINARY for permission file (visual)
	* bugfix: remove wzd_server_uid var (causing link problems)
	* bugfix: incomplete and progress bar not working (visual)

2004-02-17  Pierre Chifflier  <pollux@wzdftpd.net>

	* feature: WZD_MODULE_CLOSE function called (if existing) before module unload
	* feature: module_unload()
	* feature: hook_unload()
	* feature: new module: TCL
	* bugfix: persistant color codes on console, resulting in a disco-console after a crash
	* bugfix: modules were not dlclosed
	* bugfix: server do not reply on site command which does not exist but is permitted
	* bugfix: tls lib freed before all childs are dead
	* bugfix: segfault when deleting file with no owner
	* bugfix: some static buffers converted to dynamic
	* bugfix: ignore SIGINT when exiting
	* bugfix: segfault when using REST, TYPE or CWD with no argument

2004-02-16  Pierre Chifflier  <pollux@wzdftpd.net>

	* bugfix: incorrect path displayed in DELDIR event
	* bugfix: possible buffer overflow in LIST command

2004-02-13  Pierre Chifflier  <pollux@wzdftpd.net>

	* docs: added notes for FreeBSD (contribution from Roman Bogorodskiy)
	* bugfix: files corrupted after upload on windows (closes: #885559)

2004-02-11  Pierre Chifflier  <pollux@wzdftpd.net>
