@@ -1,1 +1,1 @@
-EXTRA_DIST = berkeley-db.m4 mysql.m4 pam.m4 pgsql.m4 tcl.m4 unicode.m4
+EXTRA_DIST = berkeley-db.m4 mysql.m4 pam.m4 openssl.m4 pgsql.m4 tcl.m4 unicode.m4
