@@ -1,3 +1,7 @@
+2004-03-02  Pierre Chifflier  <pollux@wzdftpd.net>
+
+	* configure.in: openssl is now autodetected
+
 2004-03-01  Pierre Chifflier  <pollux@wzdftpd.net>
 
 	* backends: pam backend started
